Feat: add onboarding controller api docs params
